<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_version_name">版本：1.2.6</string>
    <string name="app_copyright1">版权所有 2011-2015</string>
    <string name="app_copyright2">北京锐讯灵通科技有限公司保留所有权</string>
    <string name="company">北京锐讯灵通科技有限公司</string>
    <string name="email">support@umeng.com</string>
    <string name="qq">800083942</string>
    <string name="aboutus">关于</string>
    <string name="sina">\ @友盟</string>
    <string name="app_name">友盟统计</string>
    <string name="wether_exit">真的要退出吗？</string>
    <string name="log_out">你确定要注销本次登录？</string>
    <string name="exit_yes">是</string>
    <string name="exit_not">否</string>
    <string name="net_error">网络连接错误，请检查您的网络</string>
    <string name="validate">用户名或密码错误</string>
    <string name="username_not_null">用户名不能为空</string>
    <string name="password_not_null">密码不能为空</string>
    <string name="set_top_fail">设置失败</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="set_top_success">已将您的应用移至列表顶端</string>
    <string name="load_fail">加载失败，请检查您的网络</string>
    <string name="see_app_times_number">个</string>
    <string name="search_enter_prompt">请输入应用名或关键字</string>
    <string name="feedback">反馈</string>
    <string name="feedback_setting">反馈设置</string>
    <string name="feedback_app_setting">用户反馈推送设置</string>
    <string name="feedback_send">发送</string>
    <string name="update_software">更新</string>
    <string name="menu_exit">退出</string>
    <string name="now_id_new_version">当前已是最新版本</string>
    <string name="no_wifi_only_update_in_wifi">没有wifi连接，只在wifi下更新</string>
    <string name="time_out">超时</string>
    <string name="no_channel">没有渠道</string>
    <string name="no_version">没有版本</string>
    <string name="no_new_add">没有新增数据</string>
    <string name="no_launch">没有启动数据</string>
    <string name="account_users">累计用户 : </string>
    <string name="top10_version">Top 版本</string>
    <string name="top10_channel">Top 渠道</string>
    <string name="new_users">新增用户</string>
    <string name="activity_users">活跃用户</string>
    <string name="timeslot">时段</string>
    <string name="channel_text">渠道</string>
    <string name="version_text">版本</string>
    <string name="UmengAnalytics">友盟统计</string>
    <string name="the_data_for_all_apps">所有应用综合数据</string>
    <string name="new_user">新增用户</string>
    <string name="launch_user">启动次数</string>
    <string name="active_user">活跃用户</string>
    <string name="launchs">启动次数</string>
    <string name="accumulative_users">累计用户</string>
    <string name="see_more">查看更多..</string>
    <string name="filter">筛选</string>
    <string name="ok">确认</string>
    <string name="load">正在载入</string>
    <string name="loading">加 载 中&#8230;</string>
    <string name="loading_fail_click_to_refresh">加载失败~\n点击刷新</string>
    <string name="username">邮箱</string>
    <string name="password">密码</string>
    <string name="login">登  录</string>
    <string name="logining">登 录 中 &#8230;</string>
    <string name="remember_password">自动登录</string>
    <string name="myproduct">我的产品</string>
    <string name="searchbox_hint">请输入应用名或关键字</string>
    <string name="refresh_finished">刷新完毕</string>
    <string name="let_go_it_will_refresh">松开即可刷新</string>
    <string name="refreshing">正在刷新</string>
    <string name="refresh">刷新</string>
    <string name="search_on_app">没有搜到相应的应用</string>
    <string name="search">搜索</string>
    <string name="see_statistical_information">查看统计信息</string>
    <string name="move_app_to_top">将应用移至列表顶端</string>
    <string name="basic_statistics">基本统计</string>
    <string name="accumulative_rate">累计比例</string>
    <string name="time">时间</string>
    <string name="updating_favorite">正在更新收藏列表......</string>
    <string name="permission_problem">抱歉,权限不够, 子账户经主账户授权后方可登录</string>
    <string name="all">全部</string>
    <string name="other">其他</string>

    <!-- exception message -->
    <string name="exception_network">请求数据失败</string>
    <string name="exception_json">数据解析失败</string>

    <!-- error message of user -->
    <string name="user_name_error">用户名错误</string>
    <string name="user_exist">该账户已存在列表中,请添加其它账户</string>
    <string name="user_password_error">密码错误</string>
    <string name="today_new_add">今日新增</string>
    <string name="today_launch">今日启动</string>
    <string name="yesterday">1天前</string>
    <string name="last_week">7天前</string>
    <string name="last_month">30天前</string>
    <string name="any">任意</string>
    <string name="today_data">今日数据</string>
    <string name="yesterday_data">昨日数据</string>
    <string name="week_data">上周数据</string>
    <string name="month_data">上月数据</string>
    <string name="period">时 段</string>
    <string name="duration">时 长</string>
    <string name="data">日数据</string>
    <string name="single_time_duration">使用时长(单次)</string>
    <string name="average_time_duration">平 均 时 长</string>
    <string name="launch_times">启动次数</string>
    <string name="proportion">所占比例</string>
    <string name="single_time">单次时长</string>
    <string name="single_day_time">单日时长</string>
    <string name="remain_user">留存用户</string>
    <string name="event_count">事件统计</string>
    <string name="feed_back">用户反馈</string>
    <string name="day">按 天</string>
    <string name="new_user_add">新用户</string>
    <string name="date">日 期</string>
    <string name="day_s">日</string>
    <string name="day_w">周</string>
    <string name="day_m">月</string>
    <string name="day_weekly">自然周</string>
    <string name="day_month">自然月</string>
    <string name="event">事件名称</string>
    <string name="event_list">事件列表</string>
    <string name="event_detail">事件详情</string>
    <string name="total_trend">整体趋势</string>
    <string name="event_message_num">昨日消息数</string>
    <string name="refersh_no_data">暂无新反馈信息</string>
    <string name="refersh_error">刷新失败</string>
    <string name="label_event_text_1">参数值</string>
    <string name="label_event_text_2">消息数量</string>
    <string name="label_event_text_3">所占比例</string>
    <string name="send">发送</string>
    <string name="send_success">反馈信息发送成功 </string>
    <string name="send_fail">反馈信息发送失败 </string>
    <string name="get_feedback_fail">获取反馈信息失败</string>
    <string name="sending">发送中&#8230;</string>
    <string name="setting">管 理</string>
    <string name="suggestion">意见反馈</string>
    <string name="about">关于友盟</string>
    <string name="update">检查更新</string>
    <string name="add_test_device">注册为测试设备</string>
    <string name="dev_ideal">开发花絮</string>
    <string name="message_center">消息中心</string>
    <string name="message_details">消息详情</string>
    <string name="message_point">新消息提示</string>
    <string name="quit">注 销</string>
    <string name="open_source_license">开源协议</string>
    <string name="change_user">切换用户</string>
    <string name="user_name">邮箱</string>
    <string name="user_pwd">密码</string>
    <string name="dont_interept">勿扰时段</string>
    <string name="dont_interept_1">勿打扰时段:</string>
    <string name="push_set">推送消息</string>
    <string name="single_day_data">单日数据</string>
    <string name="service_update_note">消息通知</string>
    <string name="delete_user">你确定要删除该帐号？</string>
    <string name="logout_change">当前是多账号状况，注销会自动切换到其他已登录账号。</string>
    <string name="error_date">你所选择的日期超过了可选日期范围，请重新选择</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="please_input">请输入内容:</string>
    <string name="please_input_1">请输入内容</string>
    <string name="add_account">添   加</string>
    <string name="no_data">暂无数据</string>
    <string name="event_no_data">该事件暂无数据</string>
    <string name="no_feedback">暂无反馈</string>
    <string name="no_app">该应用无法访问或者不存在</string>
    <string name="no_oauth">没有客户端权限</string>
    <string name="user_num">用户数</string>
    <string name="add_new_user">添加新用户</string>
    <!-- 下拉刷新 -->
    <string name="pulldown_refreshing">正在加载..</string>
    <string name="pulldown_pull">下拉刷新</string>
    <string name="pulldown_release">松开刷新</string>
    <string name="header_hint_refresh_normal">下拉可以刷新</string>
    <string name="header_hint_refresh_ready">松开可以刷新</string>
    <string name="header_hint_refresh_loading">正在刷新&#8230;</string>
    <string name="header_hint_refresh_time">更新于：</string>
    <string name="footer_hint_load_normal">查看更多</string>
    <string name="footer_hint_load_ready">松开载入更多</string>
    <string name="delete_success_message">删除成功</string>
    <string name="delete_message_dialog_content">是否要删除此条消息？</string>
    <string name="push_setting">推送设置</string>
    <string name="delete_message_title">删除消息</string>
    <string name="market_evaluate">市场评价</string>
    <string name="app_push_switch_setting">应用反馈推送开关</string>
    <string name="msg_push_title">消息服务</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="scan">扫</string>
    <string name="qrcode_register_btn_text">扫描二维码</string>
    <string name="td_what_is_test_device_title">什么是测试设备？</string>
    <string name="td_what_is_test_device_title_content">测试设备用于在集成测试服务中测试统计分析SDK集成的有效性和完整性。
由测试设备发送的应用日志将在集成测试服务中实时地进行展示，您可以方便地查看包括应用版本、渠道名称、自定义事件、页面访问情况等数据，提升集成与调试的工作效率。
同时，由测试设备发送的数据不进入数据的正常处理流程，避免对用户的使用数据造成污染。</string>
    <string name="td_what_apps_to_test_title">成为测试设备后能测试哪些app？</string>
    <string name="td_what_apps_to_test_content">测试设备与您账户下所有同平台的应用将自动进行绑定，当这些应用运行在测试设备上时，后台会使用集成测试服务来处理其发送的所有日志。</string>
    <string name="td_how_to_be_test_device_title">如何成为测试设备？</string>
    <string name="td_how_to_be_test_device_content">在友盟后台管理-集成测试-测试设备目录下注册测试设备，您可以手动添加测试设备信息，也可以通过点击上方按钮，扫描注册设备页面的二维码来进行注册。</string>

</resources>