<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/myproduct_liner_n"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/qrcode_register_btn"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="#BFF2EF" >

        <ImageView
            android:id="@+id/icon_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="10dp"
            android:src="@drawable/barcode_scan" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/icon_scan"
            android:text="@string/scan"
            android:textColor="#43B2B9"
            android:textSize="23sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/icon_scan"
            android:text="@string/scan"
            android:textColor="#43B2B9"
            android:textSize="23sp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical" >

            <TextView
                style="@style/qrcode_desc_section_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/td_what_is_test_device_title" />

            <TextView
                style="@style/qrcode_desc_section_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/td_what_is_test_device_title_content" />

            <TextView
                style="@style/qrcode_desc_section_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/td_what_apps_to_test_title" />

            <TextView
                style="@style/qrcode_desc_section_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/td_what_apps_to_test_content" />

            <TextView
                style="@style/qrcode_desc_section_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/td_how_to_be_test_device_title" />

            <TextView
                style="@style/qrcode_desc_section_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/td_how_to_be_test_device_content" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="10dp" >

                <ImageView
                    android:id="@+id/td_settings1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="10dp"
                    android:padding="1dp"
                    android:src="@drawable/td_settings1" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@id/td_settings1"
                    android:layout_marginBottom="10dp"
                    android:padding="1dp"
                    android:src="@drawable/td_settings2" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>