<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="150dp"
    android:layout_height="170dp"
    android:orientation="vertical"
    android:background="@drawable/menu_bg" >
	<TextView 
	    android:layout_width="wrap_content"
	    android:layout_height="0dp"
	    android:text="@string/day"
	    android:textSize="18sp"
	    android:textColor="#FFFFFF"
	    android:layout_gravity="center_horizontal"
	    android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp"
		android:layout_marginTop="10dp"
	    android:gravity="center"
	    android:id="@+id/day"
	    android:layout_weight="1"
	    />
		<TextView 
		    android:layout_width="wrap_content"
		    android:layout_height="0dp"
		    android:layout_weight="1"
		    android:text="@string/day_weekly"
		    android:textSize="18sp"
		    android:textColor="#FFFFFF"
		    android:gravity="center"
		    android:layout_gravity="center_horizontal"
		    android:layout_marginLeft="10dp"
		    android:layout_marginRight="10dp"
		    android:id="@+id/weekly"
	    />
		<TextView 
		    android:layout_width="wrap_content"
		    android:layout_height="0dp"
		    android:layout_weight="1"
		    android:text="@string/day_month"
		    android:textSize="18sp"
		    android:textColor="#FFFFFF"
		    android:gravity="center"
		    android:layout_gravity="center_horizontal"
		    android:layout_marginLeft="10dp"
		    android:layout_marginRight="10dp"
		    android:id="@+id/month"
		    android:layout_marginBottom="10dp"
	    />
</LinearLayout>