<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/todaydata_gesture"
    android:layout_width="200dp"
    android:layout_height="250dp"
    android:orientation="vertical" >

    <!-- top -->

    <LinearLayout
        android:id="@+id/top"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@drawable/top_bar"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_message_title"
            android:textSize="18sp" />
    </LinearLayout>
    <!-- content -->

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:layout_below="@+id/top"
        android:background="@drawable/dialog_view"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:gravity="center_vertical"
            android:text="@string/delete_message_dialog_content" />

        <TextView
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/textView"
            android:background="#cccccc" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/line"
            android:weightSum="1" >

            <TextView
                android:id="@+id/ok"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/confirm" />

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_gravity="top"
                android:background="#cccccc" />

            <TextView
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/cancel" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>