<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" 
    android:background="@drawable/tab_bottom_bg"
    android:id="@+id/top_line"
    android:baselineAligned="false">
    <!-- 2 -->
    <LinearLayout 
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2.15"
        >
      <TextView
	    android:layout_width="wrap_content"
	    android:layout_height="match_parent"
	    android:text="@string/yesterday"
	    android:layout_gravity="center_vertical"
	    android:gravity="center"
	    android:textSize="@dimen/text_small"
	    android:textColor="#FFFFFF"
	    android:id="@+id/yesterday"
	    android:layout_marginLeft="18dp"
	    />
    </LinearLayout>
    <!-- 2 -->
 	<LinearLayout 
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2.2"
        >
    <TextView
	    android:layout_width="wrap_content"
	    android:layout_height="match_parent"
	    android:text="@string/last_week"
	    android:gravity="center"
	    android:textSize="@dimen/text_small"
	    android:textColor="#FFFFFF"
	    android:id="@+id/last_week"
	    android:singleLine="true"
	    android:layout_marginLeft="18dp"
	    /> 
 	</LinearLayout>
    <!-- 3 -->
 	<LinearLayout 
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2.2"
        >
    <TextView
	    android:layout_width="wrap_content"
	    android:layout_height="match_parent"
	    android:text="@string/last_month"
	    android:gravity="center"
	    android:textSize="@dimen/text_small"
	    android:textColor="#FFFFFF"
	    android:id="@+id/last_month"
	    android:layout_marginLeft="15dp"
	    /> 
 	</LinearLayout>
	<LinearLayout 
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2.2"
        >
	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="match_parent"
	    android:text="@string/any"
	    android:gravity="center"
	    android:textSize="@dimen/text_small"
	    android:layout_marginLeft="18dp"
	    android:textColor="#FFFFFF"
	    android:id="@+id/any"
	    />	        
	</LinearLayout>
	    <!--  -->
    <LinearLayout 
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
        >
	<ImageView 
		 android:layout_width="28dp"
		 android:layout_height="28dp"
		 android:layout_marginRight="5dp"
		 android:id="@+id/choose_disapper"
		 android:layout_above="@id/space"
		 android:layout_gravity="center"
		 android:layout_marginTop="4dp"
         android:background="@drawable/choose_close"/>	        
   </LinearLayout>

</LinearLayout>