<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/myproduct_liner_n"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#efefef"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:src="@drawable/umeng_logo_about" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/company"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/app_copyright1"
                android:textColor="#000000"
                android:textSize="17sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_copyright2"
                android:textColor="#000000"
                android:textSize="17sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_version_name"
                android:textColor="#000000"
                android:textSize="17sp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="center_vertical"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:orientation="horizontal" >

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:scaleType="fitCenter"
                            android:src="@drawable/about_mail_icon" />

                        <TextView
                            android:id="@+id/about_umeng_text"
                            android:layout_width="wrap_content"
                            android:layout_height="20dp"
                            android:layout_marginLeft="5dp"
                            android:gravity="center_vertical"
                            android:text="@string/email"
                            android:textColor="#000000"
                            android:textSize="15sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal" >

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:scaleType="fitCenter"
                            android:src="@drawable/about_sina_icon" />

                        <TextView
                            android:id="@+id/about_sina_text"
                            android:layout_width="wrap_content"
                            android:layout_height="20dp"
                            android:layout_marginLeft="5dp"
                            android:gravity="center_vertical"
                            android:text="@string/sina"
                            android:textColor="#000000"
                            android:textSize="15sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal" >

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:scaleType="fitCenter"
                            android:src="@drawable/about_qq_icon" />

                        <TextView
                            android:id="@+id/about_qq_text"
                            android:layout_width="wrap_content"
                            android:layout_height="20dp"
                            android:layout_marginLeft="5dp"
                            android:background="#00000000"
                            android:gravity="center_vertical"
                            android:text="@string/qq"
                            android:textColor="#000000"
                            android:textSize="15sp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>